feat: add selective API response fields
